--- a/src/SportShop/appsettings.json
+++ b/src/SportShop/appsettings.json
@@ -3,7 +3,7 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SportShop-4496cf2b-bb22-44fb-8170-41066adf8985;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=127.0.0.1;Initial Catalog=DBsports;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
